--- a/oracle-java7/Dockerfile
+++ b/oracle-java7/Dockerfile
@@ -6,7 +6,10 @@
 #
 
 # Pull base image.
-FROM dockerfile/ubuntu
+FROM phusion/baseimage
+
+# Use baseimage-docker's init system.
+CMD ["/sbin/my_init"]
 
 # Install Java.
 RUN \
@@ -16,6 +19,9 @@ RUN \
   apt-get install -y oracle-java7-installer && \
   rm -rf /var/lib/apt/lists/* && \
   rm -rf /var/cache/oracle-jdk7-installer
+
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Define working directory.
 WORKDIR /data
