--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -6,7 +6,10 @@
 #
 
 # Pull base image.
-FROM dockerfile/ubuntu
+FROM phusion/baseimage
+
+# Use baseimage-docker's init system.
+CMD ["/sbin/my_init"]
 
 # Install Java.
 RUN \
@@ -17,6 +20,8 @@ RUN \
   rm -rf /var/lib/apt/lists/* && \
   rm -rf /var/cache/oracle-jdk8-installer
 
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Define working directory.
 WORKDIR /data
